tests/paczka1/fuzzy1/89587228.err
Error in line 9: 3KW S600 363,1
Error in line 30: UryHFhxNb S600 95,1
Error in line 31: 6FnDT9Kyz S764 17,2
